# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterviz"
version = "0.1.0"
description = "Clustering project"
readme = "README.md"
authors = [
    { name="clusterviz-team", email="clusterviz-team@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]

