[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clusterviz"
version = "1.0.0"
description = "A comprehensive clustering analysis toolkit with visualization capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "clusterviz-Team", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0", 
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=6.0", "jupyter>=1.0"]

[project.urls]
"Homepage" = "https://github.com/sarazhara1/clusterviz-project"
"Bug Tracker" = "https://github.com/sarazhara1/clusterviz-project/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clusterviz = ["*.txt", "*.md"]